<resources>
    <string name="app_name">ToDo</string>
    <string name="Settings_app_settings">Настройки приложения</string>
    <string name="settings_url">URL</string>
    <string name="settings_user_login_settings">Логин</string>
    <string name="settings_user_pass_settings">Пароль</string>
    <string name="button_save">Сохранить</string>
    <string name="button_clear">Очистить</string>
    <string name="main_toolbar_checklist">Чеклист</string>
    <string name="main_toolbar_settings">Настройки Приложения</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Добавить задачу</string>
    <string name="edit_task_description_title">введите подробное описание задачи</string>
    <string name="edit_title_description">Наименование Задачи</string>
    <string name="edit_button_cancel">Отменить</string>
</resources>