<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5pt"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Settings_app_settings" />
    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5pt"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="50pt"
            android:layout_height="wrap_content"
            android:text="@string/settings_url"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settings_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5pt"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="50pt"
            android:layout_height="wrap_content"
            android:text="@string/settings_user_login_settings"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settings_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5pt"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="50pt"
            android:layout_height="wrap_content"
            android:text="@string/settings_user_pass_settings"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settings_passvord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5pt"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button_save"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button_clear"/>
    </LinearLayout>
</LinearLayout>